Fixed video width scrollbar

--- a/src/components/pages/Home/styles.module.css
+++ b/src/components/pages/Home/styles.module.css
@@ -6,7 +6,7 @@
 
 .video {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     width: auto;
     height: auto;
     object-fit: cover;
